--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,12 @@
 
-*, 
-*:after,
-*:before {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-}
 
+
+*{
+  margin: 0;
+  border: 0;
+  padding: 0;
+  box-sizing: border-box;
+  }
 
 body{
     margin: 0px;
@@ -32,6 +31,7 @@ body{
   .header h1{
     font-weight: 400;
     font-size: 2em;
+    margin: 0px;
   }
   .header .main-text{
     padding: 3em;
